static/css/stylesheet.css
/* ... */
.tags-list li {
    display: flex;
    align-items: center;
    padding: 0 0 1rem 0;
    font-size: 1.6rem;
    background: none;
    border-radius: 0;
    border-bottom: 0.1rem dashed var(--blue-grey-50);
}

.tags-list a:link,
.tags-list a:visited {
    margin: 0 0 0.5rem 0;
    display: inline-block;
    padding: 0.5rem 1rem 0.5rem 1rem;
    font-family: var(--sans-serif);
    font-size: 1.6rem;
    color: var(--grey-900);
    text-decoration: none;
    background: var(--blue-grey-50);
    border-radius: 2rem;
}

#main-entries-container .type-count {
    flex-grow: 1;
    text-align: right;
}

section#frontmatter {
    padding: 2rem;
    background: var(--blue-grey-100);
}

#section-frontmatter-container {
    padding: 2rem;
    font-family: var(--sans-serif);
    background: var(--grey-50);
    border-radius: 2rem;
}

#section-frontmatter-container li {
    padding: 0.5rem 0 0.5rem 0;
}

#section-frontmatter-container-li-row-1 {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#section-frontmatter-container li #entry-id {
    font-size: 1.6rem;
}

#section-frontmatter-container li #entry-type a:link,
#section-frontmatter-container li #entry-type a:visited {
    font-size: 1.4rem;
}

#section-frontmatter-container li#entry-date,
#section-frontmatter-container li#entry-modified {
    font-size: 1.6rem;
}

#section-frontmatter-container li#entry-reading-time {
    font-size: 1.6rem;
}

#section-frontmatter-container li#entry-link {
    font-size: 1.6rem;
    line-height: 2.5rem;
}

#section-frontmatter-container li#entry-link a:link,
#section-frontmatter-container li#entry-link a:visited {
    font-size: 1.6rem;
    color: var(--grey-900);
    text-decoration: none;
}

article#entry-content {
    padding: 2rem;
    background: var(--white);
}

#article-entry-content-container {
    font-family: var(--sans-serif);
    font-size: 1.6rem;
}

#article-entry-content-container p {
    line-height: 3rem;
}

#toc h2 {
    border-bottom: none;
    font-size: 2rem;
    margin: 0;
    padding: 0;
}

#toc ul {
    list-style-type: decimal;
    margin: 0 0 0 2.5rem;
}

#toc a:link,
#toc a:visited {
    background: none;
}

article {
    padding: 2rem;
    word-wrap: break-word;
}

article h1,
article h2,
article h3,
article h4,
article h5,
article h6 {
    padding: 1rem 0;
    font-family: var(--sans-serif);
    font-weight: 500;
    color: var(--blue-grey-800);
}

article h1 {
    line-height: 3.8rem;
    font-size: 2.8rem;
    font-weight: 700;
}

article h2 {
    margin: 0 0 1rem 0;
    line-height: 3.6rem;
    font-size: 2.6rem;
    font-weight: 600;
    border-bottom: 1px solid var(--blue-grey-50);
}

article h3 {
    line-height: 3.4rem;
    font-size: 2.4rem;
}

article h4 {
    line-height: 3.2rem;
    font-size: 2.2rem;
}

article h5 {
    line-height: 3rem;
    font-size: 2rem;
}

article h6 {
    line-height: 2.8rem;
    font-size: 1.8rem;
}

/*
.admonition.attention .admonition-title p:before {
    content: "\f071";
    font-family: "Line Awesome Free";
    font-weight: 900;
    margin: 0 0.3rem 0 0;
}
*/

.admonition-title {
    border-top-left-radius: 1rem;
    border-top-right-radius: 1rem;
    font-weight: 600;
    margin: 2rem 0 0 0;
    padding: 1rem 2rem 1rem 2rem;
    word-break: break-word;
}

.admonition-message {
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
    margin: 0 0 2rem 0;
    padding: 2rem;
}

.admonition.attention .admonition-title {
    background: var(--red-a700);
    color: var(--white);
}

.admonition.attention .admonition-message {
    background: var(--red-50);
    color: var(--red-a700);
}

.admonition.caution .admonition-title {
    background: var(--orange-a700);
    color: var(--white);
}

.admonition.caution .admonition-message {
    background: var(--orange-50);
    color: var(--orange-900);
}

.admonition.danger .admonition-title {
    background: var(--red-a700);
    color: var(--white);
}

.admonition.danger .admonition-message {
    background: var(--red-50);
    color: var(--red-a700);
}

.admonition.danger .admonition-title {
    background: var(--red-a700);
    color: var(--white);
}

.admonition.danger .admonition-message {
    background: var(--red-50);
    color: var(--red-a700);
}

.admonition.success .admonition-title {
    background: var(--green-a700);
    color: var(--white);
}

.admonition.success .admonition-message {
    background: var(--green-50);
    color: var(--green-900);
}

.admonition.hint .admonition-title {
    background: #6200EA;
    color: var(--white);
}

.admonition.hint .admonition-message {
    background: #EDE7F6;
    color: var(--deep-purple-900);
}

.admonition.important .admonition-title {
    background: var(--red-a700);
    color: var(--white);
}

.admonition.important .admonition-message {
    background: var(--red-50);
    color: var(--red-a700);
}

.admonition.note .admonition-title {
    background: #9E9E9E;
    color: var(--white);
}

.admonition.note .admonition-message {
    background: var(--grey-50);
    color: #424242;
}

.admonition.tip .admonition-title {
    background: #0091EA;
    color: var(--white);
}

.admonition.tip .admonition-message {
    background: #E1F5FE;
    color: #0D47A1;
}

.admonition.warning .admonition-title {
    background: var(--red-a700);
    color: var(--white);
}

.admonition.warning .admonition-message {
    background: var(--red-50);
    color: var(--red-a700);
}

.intra-todo {
    margin: 0.5rem 0 0.5rem 0;
    padding: 0.5rem;
    font-size: 1.4rem;  
    border-radius: 0.5rem;
    background: #ffcdd2; /* 400 */
}

.intra-done {
    margin: 0.5rem 0 0.5rem 0;
    padding: 0.5rem;
    font-size: 1.4rem;  
    border-radius: 0.5rem;
    background: var(--blue-grey-50); /* 400 */
}

article p:last-of-type {
    padding: 0;
}

article p {
    padding: 0.5rem 0;
    line-height: 3rem;
}

article p code {
    background: var(--blue-grey-50);
}
/* ... */

